--- a/backend/Makefile
+++ b/backend/Makefile
@@ -36,7 +36,7 @@ APP_NAME = homework
 MAIN_FILE = cmd/main.go
 COVERAGE_FILE_NAME = coverage.out
 COVERAGE_HTML_FILE_NAME = coverage.html
-PROTO_DIR = api/order-service/v1
+PROTO_DIR = api/user-service/v1
 
 # Postgres
 PSQL_DSN = "postgres://postgres:postgres@localhost:5432/postgres?sslmode=disable"
@@ -116,7 +116,7 @@ generate:
 		--plugin=protoc-gen-grpc-gateway=$(LOCAL_BIN)/protoc-gen-grpc-gateway --grpc-gateway_out ${OUT_PATH} --grpc-gateway_opt paths=source_relative \
 		--plugin=protoc-gen-openapiv2=$(LOCAL_BIN)/protoc-gen-openapiv2 --openapiv2_out=${OUT_PATH} \
 		--plugin=protoc-gen-validate=$(LOCAL_BIN)/protoc-gen-validate --validate_out="lang=go,paths=source_relative:${OUT_PATH}" \
-		./api/order-service/v1/order_service.proto
+		./api/user-service/v1/user_service.proto
 
 .vendor-proto: .vendor-proto/google/protobuf .vendor-proto/google/api .vendor-proto/protoc-gen-openapiv2/options .vendor-proto/validate
 
