--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -14,10 +14,5 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4.2.2
-
-      - name: Set up Go
-        uses: actions/setup-go@v5.1.0
-        with:
-          go-version: '1.23'
+      - name: Build Application
+        run: echo "Build step running"
