--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -14,5 +14,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Build Application
-        run: echo "Build step running"
+      - uses: actions/checkout@v4
+
+      - name: Run a one-line script
+        run: echo Hello, world!
