--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -16,5 +16,25 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: Set up Go
+        uses: actions/setup-go@v5.1.0
+        with:
+          go-version: '1.23'
+
+      - name: Install dependencies
+        run: go mod tidy
+
+      - name: Run linter
+        run: golangci-lint run ./...
+
+      - name: Run tests
+        run: go test ./... -v
+
+      - name: Generate coverage report
+        run: go test ./... -coverprofile=coverage.out
+
+      - name: Upload coverage report
+        uses: actions/upload-artifact@v3
+        with:
+          name: coverage-report
+          path: coverage.out
