--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -1,22 +1,47 @@
-name: Backend CI/CD
+name: Auth Service CI/CD
 
 on:
   push:
     branches: ["main"]
     paths:
-      - 'backend/**'
+      - 'backend/auth/**'
   pull_request:
     branches: ["main"]
     paths:
-      - 'backend/**'
+      - 'backend/auth/**'
 
 jobs:
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Go
+        uses: actions/setup-go@v5.3.0
+        with:
+          go-version: '1.23.5'
+      - name: Install golangci-lint
+        run: go install github.com/golangci/golangci-lint/cmd/golangci-lint@latest
+      - name: Run golangci-lint
+        run: golangci-lint run
+
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-
       - name: Set up Go
         uses: actions/setup-go@v5.1.0
         with:
-          go-version: '1.23'
+          go-version: '1.23.5'
+      - name: Cache Go modules
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/go/pkg/mod
+            ~/.cache/go-build
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-
+      - name: Build
+        run: go build -v ./...
+      - name: Test
+        run: go test -v ./...
