--- a/backend/buf.gen.yaml
+++ b/backend/buf.gen.yaml
@@ -14,7 +14,7 @@ plugins:
     opt:
       - paths=source_relative
   - local: protoc-gen-openapiv2
-    out: gen
+    out: swagger
   - local: protoc-gen-validate
     out: gen
     opt:
