--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -23,6 +23,7 @@ jobs:
         run: go install github.com/golangci/golangci-lint/cmd/golangci-lint@latest
       - name: Run golangci-lint
         run: golangci-lint run
+        working-directory: backend/auth
 
   build:
     runs-on: ubuntu-latest
@@ -42,6 +43,8 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-go-
       - name: Build
+        working-directory: backend/auth
         run: go build -v ./...
       - name: Test
+        working-directory: backend/auth
         run: go test -v ./...
