--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -29,6 +29,12 @@ jobs:
       - name: Install buf
         run: go install github.com/bufbuild/buf/cmd/buf@latest
 
+      - name: Install protoc-gen-go
+        run: go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
+
+      - name: Install protoc-gen-go-grpc
+        run: go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
+
       - name: Pull common proto files
         working-directory: backend
         run: buf export buf.build/googleapis/googleapis --output common/proto/
