--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -35,6 +35,9 @@ jobs:
       - name: Install protoc-gen-go-grpc
         run: go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
 
+      - name: Install protoc-gen-grpc-gateway
+        run: go install github.com/grpc-ecosystem/grpc-gateway/v2/protoc-gen-grpc-gateway@latest
+
       - name: Pull common proto files
         working-directory: backend
         run: buf export buf.build/googleapis/googleapis --output common/proto/
