--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -38,6 +38,9 @@ jobs:
       - name: Install protoc-gen-grpc-gateway
         run: go install github.com/grpc-ecosystem/grpc-gateway/v2/protoc-gen-grpc-gateway@latest
 
+      - name: Install protoc-gen-openapiv2
+        run: go install github.com/grpc-ecosystem/grpc-gateway/v2/protoc-gen-openapiv2@latest
+
       - name: Pull common proto files
         working-directory: backend
         run: buf export buf.build/googleapis/googleapis --output common/proto/
