--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -23,9 +23,6 @@ jobs:
         with:
           go-version: '1.23.5'
 
-      - name: Install golangci-lint
-        run: go install github.com/golangci/golangci-lint/cmd/golangci-lint@latest
-
       - name: Install buf
         run: go install github.com/bufbuild/buf/cmd/buf@latest
 
@@ -51,8 +48,10 @@ jobs:
       - name: Run go generate
         run: go generate ./...
 
-      - name: Run golangci-lint
-        run: golangci-lint run
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v6
+        with:
+          version: v1.64.7
 
       - name: Cache Go modules
         uses: actions/cache@v4
