--- a/backend/Makefile
+++ b/backend/Makefile
@@ -4,6 +4,16 @@ DB_PARAMS = ?sslmode=disable
 
 MIGRATE_CREATE = migrate create -ext sql -dir
 
+deps/protoc:
+	go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
+	go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
+	go install github.com/grpc-ecosystem/grpc-gateway/v2/protoc-gen-grpc-gateway@latest
+	go install github.com/grpc-ecosystem/grpc-gateway/v2/protoc-gen-openapiv2@latest
+	go install github.com/envoyproxy/protoc-gen-validate/cmd/protoc-gen-validate-go@latest
+
+deps/linters:
+	sudo curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/HEAD/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.64.7
+
 common/pull/proto:
 	buf export buf.build/googleapis/googleapis --output common/proto/
 
@@ -13,6 +23,9 @@ services/deploy:
 	docker-compose up
 
 ### Auth service targets
+auth/lint:
+	cd auth && golangci-lint run
+
 auth/build:
 	cd auth && go build -o bin/auth ./cmd/auth
 
