--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -52,6 +52,7 @@ jobs:
         uses: golangci/golangci-lint-action@v6
         with:
           version: v1.64.7
+          working-directory: backend/auth
 
       - name: Cache Go modules
         uses: actions/cache@v4
