--- a/.github/workflows/auth-backend.yml
+++ b/.github/workflows/auth-backend.yml
@@ -68,9 +68,11 @@ jobs:
         run: go test -race -coverprofile=coverage.txt -covermode=atomic ./...
 
       - name: Upload coverage report to Codecov
-        uses: codecov/codecov-action@v3
+        uses: codecov/codecov-action@v5
         with:
-          file: ./backend/auth/coverage.txt
+          token: ${{ secrets.CODECOV_TOKEN }}
+          slug: ${{ github.repository }}
+          files: ./backend/auth/coverage.txt
           fail_ci_if_error: false
           verbose: true
 
