--- a/.github/actions/codegen/action.yml
+++ b/.github/actions/codegen/action.yml
@@ -45,6 +45,11 @@ runs:
         go install github.com/grpc-ecosystem/grpc-gateway/v2/protoc-gen-openapiv2@latest
         go install github.com/envoyproxy/protoc-gen-validate/cmd/protoc-gen-validate-go@latest
 
+    - name: Install mockgen
+      shell: bash
+      run: |
+        go install go.uber.org/mock/mockgen@latest
+
     - name: Cache common proto files
       uses: actions/cache@v4
       with:
