--- a/.github/workflows/auth-backend.yml
+++ b/.github/workflows/auth-backend.yml
@@ -67,6 +67,32 @@ jobs:
       - name: Run tests with coverage
         run: go test -race -coverprofile=coverage.txt -covermode=atomic ./...
 
+      - name: Download artifact - main test coverage
+        id: download-main-breakdown
+        uses: dawidd6/action-download-artifact@v9
+        with:
+          branch: main
+          workflow_conclusion: success
+          name: main.breakdown.backend.auth
+          if_no_artifact_found: warn
+
+      - name: Check test coverage
+        uses: vladopajic/go-test-coverage@v2.13.0
+        with:
+          profile: coverage.txt
+          threshold-total: 15
+          source-dir: backend/auth
+          breakdown-file-name: ${{ github.ref_name == 'main' && 'main.breakdown.backend.auth' || '' }}
+          diff-base-breakdown-file-name: ${{ steps.download-main-breakdown.outputs.found_artifact == 'true' && 'main.breakdown.backend.auth' || '' }}
+
+      - name: upload artifact (main.breakdown)
+        uses: actions/upload-artifact@v4
+        if: github.ref_name == 'main'
+        with:
+          name: main.breakdown.backend.auth
+          path: main.breakdown.backend.auth
+          if-no-files-found: error
+
       - name: Upload coverage report to Codecov
         uses: codecov/codecov-action@v5
         with:
