--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "test:screenshots:mobile": "node screenshot-tests.js",
+    "test:screenshots:mobile:update": "node screenshot-tests.js --update-reference"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
