--- a/backend/auth/configs/base.yaml
+++ b/backend/auth/configs/base.yaml
@@ -8,6 +8,10 @@ logging:
   level: debug
   format: console
 
+swagger-ui:
+  path: /app/swagger-ui
+  enabled: true
+
 database:
   host: db
   port: 5432
