--- a/backend/auth/docker-compose.debug.yml
+++ b/backend/auth/docker-compose.debug.yml
@@ -1,6 +1,7 @@
 services:
   auth:
-    entrypoint: ["dlv", "--listen=:40000", "--headless=true", "--api-version=2", "--accept-multiclient", "exec", "/app/app"]
+    build:
+      dockerfile: debug.Dockerfile
     ports:
       - "40000:40000"
     security_opt:
