--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/icons-material": "^6.4.7",
     "@mui/material": "^6.3.1",
+    "@reduxjs/toolkit": "^2.6.1",
     "autoprefixer": "^10.4.20",
     "classnames": "^2.5.1",
     "keep-react": "^1.6.1",
@@ -25,6 +26,7 @@
     "postcss": "^8.4.49",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
     "react-swipeable": "^7.0.2",
     "swiper": "^11.2.2",
