--- a/backend/Makefile
+++ b/backend/Makefile
@@ -23,16 +23,19 @@ deps/protoc:
 deps/linters:
 	sudo curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/HEAD/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.64.7
 
-common/pull/proto:
-	$(call CLONE_PROTO_REPO, https://github.com/googleapis/googleapis, google/api)
+common/pull/proto: common/pull/proto/googleapis
+
+common/pull/proto/googleapis:
+	$(call CLONE_PROTO_REPO, https://github.com/googleapis/googleapis,google/api/http.proto google/api/annotations.proto)
 
 define CLONE_PROTO_REPO
 	@echo "Клонируем $(1)"
 	git clone --filter=blob:none --no-checkout $(1) common/proto
 	cd common/proto && \
 		git sparse-checkout init --no-cone && \
-		git sparse-checkout set $(2)/*.proto && \
+		git sparse-checkout set $(2) && \
 		git checkout
+	rm -rf common/proto/.git
 endef
 
 generate: auth/generate
