--- a/.github/actions/codegen/action.yml
+++ b/.github/actions/codegen/action.yml
@@ -25,9 +25,9 @@ runs:
 
     - name: Set up Go
       uses: actions/setup-go@v5.1.0
-      working-directory: ${{ inputs.working-directory }}
       with:
-        go-version: ${{ inputs.go-version }}
+        go-version-file: ${{ inputs.working-directory }}/go.mod
+        cache-dependency-path: ${{ inputs.working-directory }}/go.sum
 
     # Install required tools for code generation
     - name: Setup Buf
