fix workflow migrate v6

--- a/.github/workflows/auth-backend-release.yml
+++ b/.github/workflows/auth-backend-release.yml
@@ -72,7 +72,8 @@ jobs:
 
       - name: Download yc
         run: |
-          curl -sSL https://storage.yandexcloud.net/yandexcloud-yc/install.sh | bash
+          curl -sSL https://storage.yandexcloud.net/yandexcloud-yc/install.sh | bash -s -- -i $HOME/yandex-cloud
+          echo "$HOME/yandex-cloud" >> $GITHUB_PATH
 
       - name: Setup yc
         run: |
