--- a/.github/workflows/auth-backend-release.yml
+++ b/.github/workflows/auth-backend-release.yml
@@ -64,7 +64,8 @@ jobs:
       - name: Setup yc
         run: |
           curl -sSL https://storage.yandexcloud.net/yandexcloud-yc/install.sh | bash -s -- -i /opt/yc -n
-          /opt/yc/bin/yc config set service-account-key "${{ secrets.YC_SERVICE_KEY }}"
+          echo "/opt/yc/bin/yc" >> $GITHUB_PATH
+          yc config set service-account-key "${{ secrets.YC_SERVICE_KEY }}"
 
       - name: Migrate up
         run: |
@@ -94,7 +95,8 @@ jobs:
       - name: Setup yc
         run: |
           curl -sSL https://storage.yandexcloud.net/yandexcloud-yc/install.sh | bash -s -- -i /opt/yc -n
-          /opt/yc/bin/yc config set service-account-key "${{ secrets.YC_SERVICE_KEY }}"
+          echo "/opt/yc/bin/yc" >> $GITHUB_PATH
+          yc config set service-account-key "${{ secrets.YC_SERVICE_KEY }}"
 
       - name: Login docker
         run: |
