--- a/.github/workflows/auth-backend-release.yml
+++ b/.github/workflows/auth-backend-release.yml
@@ -65,6 +65,7 @@ jobs:
         run: |
           curl -sSL https://storage.yandexcloud.net/yandexcloud-yc/install.sh | bash -s -- -i /opt/yc -n
           echo "${{ secrets.YC_SERVICE_KEY }}" > sa-key.json
+          cat sa-key.json
           /opt/yc/bin/yc config set service-account-key sa-key.json
 
       - name: Migrate up
