--- a/.github/workflows/auth-backend-release.yml
+++ b/.github/workflows/auth-backend-release.yml
@@ -64,7 +64,7 @@ jobs:
       - name: Setup yc
         run: |
           curl -sSL https://storage.yandexcloud.net/yandexcloud-yc/install.sh | bash -s -- -i /opt/yc -n
-          echo "${{ secrets.YC_SERVICE_KEY }}" > sa-key.json
+          echo '${{ secrets.YC_SERVICE_KEY }}' > sa-key.json
           cat sa-key.json
           /opt/yc/bin/yc config set service-account-key sa-key.json
 
@@ -96,7 +96,7 @@ jobs:
       - name: Setup yc
         run: |
           curl -sSL https://storage.yandexcloud.net/yandexcloud-yc/install.sh | bash -s -- -i /opt/yc -n
-          echo "${{ secrets.YC_SERVICE_KEY }}" > sa-key.json
+          echo '${{ secrets.YC_SERVICE_KEY }}' > sa-key.json
           /opt/yc/bin/yc config set service-account-key sa-key.json
 
       - name: Login docker
