fix workflow migrate v28

--- a/.github/workflows/auth-backend-release.yml
+++ b/.github/workflows/auth-backend-release.yml
@@ -61,9 +61,11 @@ jobs:
           go-version-file: backend/auth/go.mod
           cache-dependency-path: backend/auth/go.sum
 
-      - name: Download goose
+      - name: Download migrate
         run: |
-          go install github.com/pressly/goose/v3/cmd/goose@latest
+          curl -L https://github.com/golang-migrate/migrate/releases/download/v4.18.2/migrate.linux-amd64.tar.gz -o migrate.tar.gz
+          tar -zxvf migrate.tar.gz
+          chmod +x migrate
 
       - name: Setup yc
         run: |
@@ -80,8 +82,7 @@ jobs:
           
           mkdir -p ~/.postgresql && wget "https://storage.yandexcloud.net/cloud-certs/CA.pem" --output-document ~/.postgresql/root.crt && chmod 0600 ~/.postgresql/root.crt
           
-          goose -dir migtest postgres "postgres://$DB_USER:$DB_PASS@${{ vars.TESTING_DB_HOST }}:6432/auth?sslmode=verify-full&target_session_attrs=read-write&sslrootcert=/home/runner/.postgresql/root.crt" up
-          
+          ./migrate -source file://migrations -database "postgres://$DB_USER:$DB_PASS@${{ vars.TESTING_DB_HOST }}:6432/auth?sslmode=verify-full&target_session_attrs=read-write" up
 
   build:
     runs-on: ubuntu-latest
