--- a/.github/workflows/auth-backend-release.yml
+++ b/.github/workflows/auth-backend-release.yml
@@ -1,6 +1,8 @@
 name: Auth Service Release Flow
 on:
-  workflow_dispatch:
+  push:
+    tags:
+      - 'release-auth-v*'
 
 jobs:
   lint:
@@ -40,26 +42,22 @@ jobs:
         run: MIGRATIONS_PATH=${{ github.workspace }}/backend/auth/migrations go test ./... -race
 
       - name: Docker compose
-        run: cd .. && docker compose -f docker-compose.testing.yml up -d
+        run: cd .. && docker compose -f docker-compose.tests.yml up -d
 
       - name: Run functional tests
         run: echo "Running functional tests"
 
   migrate-testing-up:
     runs-on: ubuntu-latest
-    needs: test
+    needs:
+      - test
+      - lint
     timeout-minutes: 10
     defaults:
       run:
         working-directory: backend/auth
     steps:
       - uses: actions/checkout@v4
-
-      - name: Set up Go
-        uses: actions/setup-go@v5.1.0
-        with:
-          go-version-file: backend/auth/go.mod
-          cache-dependency-path: backend/auth/go.sum
 
       - name: Download migrate
         run: |
@@ -84,7 +82,7 @@ jobs:
           
           ./migrate -source file://migrations -database "postgres://$DB_USER:$DB_PASS@${{ vars.TESTING_DB_HOST }}:6432/auth?sslmode=verify-full&target_session_attrs=read-write&sslrootcert=/home/runner/.postgresql/root.crt" up
 
-  build:
+  build-testing:
     runs-on: ubuntu-latest
     needs: migrate-testing-up
     timeout-minutes: 10
@@ -98,6 +96,9 @@ jobs:
         with:
           working-directory: backend/auth
 
+      - name: Extract tag version
+        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
+
       - name: Setup yc
         run: |
           curl -sSL https://storage.yandexcloud.net/yandexcloud-yc/install.sh | bash -s -- -i /opt/yc -n
@@ -110,4 +111,22 @@ jobs:
           echo $(/opt/yc/bin/yc iam create-token)|docker login --username iam --password-stdin cr.yandex
 
       - name: Build Docker image
-        run: docker build -t cr.yandex/crpe9kgeql1v6b7gujfj/auth-testing:latest --push . -f testing.Dockerfile
+        run: docker build -t cr.yandex/crpe9kgeql1v6b7gujfj/auth-testing:${{ env.RELEASE_VERSION }} --push . -f testing.Dockerfile
+
+      - name: Generate docker-compose.yml with version
+        run: |
+          sed "s/{{AUTH_VERSION}}/${{ env.RELEASE_VERSION }}/g" backend/docker-compose.testing-template.yml > docker-compose.testing-generated.yml
+
+      - name: Deploy to testing
+        run: |
+          /opt/yc/bin/yc compute instance-group add-metadata --name vm-testing --metadata-from-file docker-compose=docker-compose.testing-generated.yml
+
+
+  publish-release:
+    runs-on: ubuntu-latest
+    needs: build-testing
+    environment:
+      name: Production
+    steps:
+      - name: Release
+        uses: softprops/action-gh-release@v2
