fix postgres connect

--- a/backend/auth/configs/testing.yaml
+++ b/backend/auth/configs/testing.yaml
@@ -9,7 +9,7 @@ logging:
   format: json
 
 database:
-  host: rc1b-2ebn83j0efcj6nkm.mdb.yandexcloud.net
+  host: rc1a-1ns3p57pcpp20u6s.mdb.yandexcloud.net
   port: 6432
   database: auth
-  options: sslmode=verify-full&target_session_attrs=read-write
+  options: sslmode=verify-full&target_session_attrs=read-write&sslrootcert=/root/.postgresql/root.crt
