--- a/.github/workflows/auth-backend-release.yml
+++ b/.github/workflows/auth-backend-release.yml
@@ -1,8 +1,9 @@
 name: Auth Service Release Flow
 on:
-  push:
-    tags:
-      - 'release-auth-v*'
+  workflow_dispatch:
+
+permissions:
+  contents: write
 
 jobs:
   lint:
@@ -96,8 +97,8 @@ jobs:
         with:
           working-directory: backend/auth
 
-      - name: Extract tag version
-        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
+      - name: Set release version
+        run: echo "RELEASE_VERSION=${{ github.run_number }}" >> $GITHUB_ENV
 
       - name: Setup yc
         run: |
@@ -130,3 +131,8 @@ jobs:
     steps:
       - name: Release
         uses: softprops/action-gh-release@v2
+        with:
+          tag_name: ${{ env.RELEASE_VERSION }}
+          name: ${{ env.RELEASE_VERSION }}
+          draft: false
+          prerelease: false
