--- a/.github/workflows/auth-backend-release.yml
+++ b/.github/workflows/auth-backend-release.yml
@@ -129,10 +129,13 @@ jobs:
     environment:
       name: Production
     steps:
+      - name: Set release version
+        run: echo "RELEASE_VERSION=${{ github.run_number }}" >> $GITHUB_ENV
+
       - name: Release
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: ${{ env.RELEASE_VERSION }}
-          name: ${{ env.RELEASE_VERSION }}
+          tag_name: release-auth-v${{ env.RELEASE_VERSION }}
+          name: Release Auth v${{ env.RELEASE_VERSION }}
           draft: false
           prerelease: false
