--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,10 @@
     "fix": "npm run lint:fix && npm run format",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "test-storybook": "test-storybook",
+    "test-storybook:coverage": "test-storybook --coverage",
+    "storybook-coverage": "npm run test-storybook:coverage && npm run generate-coverage-report"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -25,6 +28,7 @@
     "@mui/icons-material": "^6.4.7",
     "@mui/material": "^6.3.1",
     "@reduxjs/toolkit": "^2.6.1",
+    "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.20",
     "classnames": "^2.5.1",
     "keep-react": "^1.6.1",
@@ -36,11 +40,13 @@
     "react-router-dom": "^7.1.1",
     "react-swipeable": "^7.0.2",
     "swiper": "^11.2.2",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.5",
     "@eslint/js": "^9.17.0",
+    "@storybook/addon-coverage": "^1.0.5",
     "@storybook/addon-essentials": "^8.6.4",
     "@storybook/addon-onboarding": "^8.6.4",
     "@storybook/blocks": "^8.6.4",
@@ -48,6 +54,7 @@
     "@storybook/react": "^8.6.4",
     "@storybook/react-vite": "^8.6.4",
     "@storybook/test": "^8.6.4",
+    "@storybook/test-runner": "^0.17.0",
     "@swc/core": "^1.11.9",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
@@ -66,12 +73,14 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "eslint-plugin-storybook": "^0.11.4",
+    "glob": "^10.4.5",
     "globals": "^15.14.0",
     "html-reporter": "^10.14.1",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jest-image-snapshot": "^6.4.0",
     "lint-staged": "^15.5.0",
+    "nyc": "^15.1.0",
     "playwright": "^1.51.0",
     "prettier": "^3.5.3",
     "storybook": "^8.6.4",
